BUG: fix debt total amount spacing

--- a/be/proj/static/css/base.scss
+++ b/be/proj/static/css/base.scss
@@ -324,6 +324,7 @@ body {
   text-align: center;
   @extend %mono;
   font-size: 24px;
+  letter-spacing: 4px;
 }
 
 .social-media {
